--- a/index.html
+++ b/index.html
@@ -402,14 +402,17 @@
             <form action="#" class="send-form">
                <h2 class="section-title">Подпишитесь на рассылку</h2>
                <div class="send-wraper">
-                   <label for="send">E-mail</label>
+                   <label for="send"
+                   class="send" >
                <input type="email" name="send" id="send">
                <button type="button" class="send-btn">
                   <span>Подписаться</span>
                   <svg class="icon-send" width="24" height="24">
                      <use href="./images/icons/symbol-defs.svg#icon-send"></use>
                   </svg>
+                  
                </button>
+               </label>
                </div>
               
 
