--- a/portfolio.html
+++ b/portfolio.html
@@ -221,63 +221,78 @@
 
    <footer class="futter">
       <div class="cotener">
-         <div class="tumb-futter">
-            <ul class="tumb-futter-list">
-               <li class="tumb-futter-list-items">
-                  <a class="logo" href="#"><span>Web</span>Studio</a>
-                  <address class="footer-adress">
-                     <ul class="list-down">
-                        <li class="adress-item ">
-                           <a class="link" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">
-                              г. Киев,
-                              пр-т
-                              Леси Украинки, 26
-                           </a>
-                        </li>
-                        <li class="adress-item"><a class="link" href="mailto:info@example.com">info@example.com</a>
-                        </li>
-                        <li class="adress-item"><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
-                     </ul>
-                  </address>
-               </li>
-               <li class="tumb-futter-list-items">
-                  <h2 class="section-title">присоединяйтесь</h2>
-                  <div class="masters-soc">
-                     <ul class="masters-soc-list list">
-                        <li class="masters-soc-item">
-                           <a href="#" class="masters-soc-link soc link">
-                              <svg class="masters-soc-icons" width="20" height="20">
-                                 <use href="./images/icons/symbol-defs.svg#icon-instagram-2"></use>
-                              </svg>
-                           </a>
-                        </li>
-                        <li class="masters-soc-item">
-                           <a href="#" class="masters-soc-link soc link"> <svg class="masters-soc-icons" width="20"
-                                 height="20">
-                                 <use href="./images/icons/symbol-defs.svg#icon-twitter-1"></use>
-                              </svg></a>
-                        </li>
-                        <li class="masters-soc-item">
-                           <a href="#" class="masters-soc-link soc link">
-                              <svg class="masters-soc-icons" width="20" height="20">
-                                 <use href="./images/icons/symbol-defs.svg#icon-facebook-1"></use>
-                              </svg>
-                           </a>
-                        </li>
-                        <li class="masters-soc-item">
-                           <a href="#" class="masters-soc-link soc link">
-                              <svg class="masters-soc-icons" width="20" height="20">
-                                 <use href="./images/icons/symbol-defs.svg#icon-linkedin-1"></use>
-                              </svg>
-                           </a>
-                        </li>
-                     </ul>
-                  </div>
-               </li>
-            </ul>
+         <div class="tumb-futter-list">
+            <div class="tumb-futter-list-items">
+               <a class="logo" href="#"><span>Web</span>Studio</a>
+               <address class="footer-adress">
+                  <ul class="list-down">
+                     <li class="adress-item">
+                        <a class="link" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">
+                           г. Киев, пр-т Леси Украинки, 26
+                        </a>
+                     </li>
+                     <li class="adress-item">
+                        <a class="link" href="mailto:info@example.com">info@example.com</a>
+                     </li>
+                     <li class="adress-item">
+                        <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
+                     </li>
+                  </ul>
+               </address>
+            </div>
+            <div class="tumb-futter-list-items">
+
+               <h2 class="section-title">присоединяйтесь</h2>
+
+               <ul class="masters-soc-list list">
+                  <li class="masters-soc-item">
+                     <a href="#" class="masters-soc-link soc link">
+                        <svg class="masters-soc-icons" width="20" height="20">
+                           <use href="./images/icons/symbol-defs.svg#icon-instagram-2"></use>
+                        </svg>
+                     </a>
+                  </li>
+                  <li class="masters-soc-item">
+                     <a href="#" class="masters-soc-link soc link">
+                        <svg class="masters-soc-icons" width="20" height="20">
+                           <use href="./images/icons/symbol-defs.svg#icon-twitter-1"></use>
+                        </svg></a>
+                  </li>
+                  <li class="masters-soc-item">
+                     <a href="#" class="masters-soc-link soc link">
+                        <svg class="masters-soc-icons" width="20" height="20">
+                           <use href="./images/icons/symbol-defs.svg#icon-facebook-1"></use>
+                        </svg>
+                     </a>
+                  </li>
+                  <li class="masters-soc-item">
+                     <a href="#" class="masters-soc-link soc link">
+                        <svg class="masters-soc-icons" width="20" height="20">
+                           <use href="./images/icons/symbol-defs.svg#icon-linkedin-1"></use>
+                        </svg>
+                     </a>
+                  </li>
+               </ul>
+            </div>
+            <form action="#" class="send-form">
+               <h2 class="section-title">Подпишитесь на рассылку</h2>
+               <div class="send-wraper">
+                  <label for="send" class="send">
+                     <input type="email" name="send" id="send" placeholder="E-mail" class="send-input">
+                     <button type="button" class="btn send-btn">
+                        <span>Подписаться</span>
+                        <svg class="icon-send" width="24" height="24">
+                           <use href="./images/icons/symbol-defs.svg#icon-send"></use>
+                        </svg>
+
+                     </button>
+                  </label>
+               </div>
+
+
+            </form>
          </div>
       </div>
-
    </footer>
 
 </body>
