--- a/index.html
+++ b/index.html
@@ -417,54 +417,60 @@
             </form>
          </div>
       </div>
-   </footer>is-hidden
-   <div class="backdrop " data-modal>
+   </footer>
+   <div class="backdrop is-hidden" data-modal>
       <div class="modal">
          <button type="button" class="close" data-modal-close>
-            <svg class="icon-close" width="11" height="11">
+            <svg class="icon-close" width="18" height="18">
                <use href="./images/icons/symbol-defs.svg#icon-close-black"></use>
             </svg>
          </button>
          <div class="wraper-form">
-            <h2 class="title-form">Оставьте свои данные, мы вам перезвоним</h2>
+            <b class="title-form">Оставьте свои данные, мы вам перезвоним</b>
             <form action="#" class="form-backdrop">
                <ul class="form-list">
                   <li class="form-item">
                      <label for="name">
                         Имя
                      </label>
-                     <input type="text" 
-                     class="form-imput style"
-                      placeholder=" " 
-                      name="name" 
-                      id="name">
+                     <input type="text" class="form-imput style" placeholder=" " name="name" id="name">
+                     <svg class="form-incons" width="18" height="18">
+                        <use href="./images/icons/symbol-defs.svg#person-black"></use>
+                     </svg>
                   </li>
                   <li class="form-item">
                      <label for="tel">
                         Телефон
                      </label>
-                     <input type="tel" 
-                     class="form-imput style"
-                     name="tel"
-                      id="tel">
+                     <input type="tel" class="form-imput style" name="tel" id="tel">
+                     <svg class="form-incons" width="18" height="18">
+                        <use href="./images/icons/symbol-defs.svg#phone-black"></use>
+                     </svg>
                   </li>
                   <li class="form-item">
                      <label for="email">
                         Почта
                      </label>
-                     <input type="email" class="form-imput style" placeholder="vfghgfgh"
-                      name="email" 
-                      id="email">
+                     <input type="email" class="form-imput style" placeholder=" " name="email" id="email">
+                     <svg class="form-incons" width="18" height="18">
+                        <use href="./images/icons/symbol-defs.svg#email-black"></use>
+                     </svg>
                   </li>
                   <li class="form-item">
                      <label for="text">Комментарий</label>
-                     <textarea name="text"
-                     class="form-imput style"
-                      id="text"  placeholder="Введите текст"></textarea>
+                     <textarea name="text" class="form-imput style" id="text" placeholder="Введите текст"></textarea>
                   </li>
                   <li class="form-checkbox">
-                     <input type="checkbox" name="polyci" id="polyci"><label for="polyci">Соглашаюсь с рассылкой и
-                        принимаю</label><span> <a href="#">Условия договора</a></span>
+                     <label for="polyci" class="check-label">
+                        <input class="input-check visually-hidden" type="checkbox" name="polyci" id="polyci">
+                        <span class="check-span">
+                           <svg class="icon-check" width="14" height="15">
+                              <use href="./images/icons/symbol-defs.svg#icon-check"></use>
+                           </svg>
+                        </span>
+                        Соглашаюсь с рассылкой и
+                        принимаю<a href="#">Условия договора</a>
+                     </label>
                   </li>
                </ul>
                <button class="btn" type="submit" value="">Отправить
