--- a/portfolio.html
+++ b/portfolio.html
@@ -279,16 +279,15 @@
                <div class="send-wraper">
                   <label for="send" class="send">
                      <input type="email" name="send" id="send" placeholder="E-mail" class="send-input">
-                     <button type="button" class="btn send-btn">
-                        <span>Подписаться</span>
-                        <svg class="icon-send" width="24" height="24">
-                           <use href="./images/icons/symbol-defs.svg#icon-send"></use>
-                        </svg>
-
-                     </button>
                   </label>
-               </div>
+                  <button type="submit" class="btn send-btn">
+                     <span>Подписаться</span>
+                     <svg class="icon-send" width="24" height="24">
+                        <use href="./images/icons/symbol-defs.svg#icon-send"></use>
+                     </svg>
 
+                  </button>
+               </div>
 
             </form>
          </div>
