fix portfolio html

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 
    <header class="heder ">
       <div class="cotener nav-bar">
-         <a class="logo" href="#"><span>Web</span>Studio</a>
+         <a class="logo" href="./index.html"><span>Web</span>Studio</a>
          <nav class="nav">
             <ul class="nav-list list">
                <li><a class="link " href="./index.html">Студия</a></li>
